...
        myColl.translatesAutoresizingMaskIntoConstraints = false
        return myColl
    }()
    
    var searchBar: UISearchController = {
            let sb = UISearchController()
            sb.searchBar.placeholder = "Enter the movie name"
            sb.searchBar.searchBarStyle = .minimal
            return sb
        }()
    
    // MARK: - Lifecycle
    override func viewDidLoad() {
...
        // check the performances in Organizer for loading the viewController
        mxSignpost(.begin, log: MXMetricManager.allHeroesViewController, name: "AllHeroesViewController")
        
        if let layout = collectionView.collectionViewLayout as? PinterestLayout{
            layout.delegate = self
        }
        self.title = "Heroes"
        
        searchBar.searchResultsUpdater = self
        navigationItem.searchController = searchBar
        
        addViews()
        mxSignpost(.begin, log: MXMetricManager.heroesFetch, name: "heroesFetch")
...
