...
        setupStackView()
    }
    
    // MARK: - Private Methods
    
    private func configureNavigationBar() {
        title = "Superhero Details"
    }
    
    private func setupScrollView() {
        view.addSubview(scrollView)
        NSLayoutConstraint.activate([
            scrollView.topAnchor.constraint(equalTo: view.topAnchor),
...
